HaikuDepot: Cleanup and release references early.

So that we do not destroy things in the wrong order and trigger
the reference-counting assertions.

Fixes #17579.